@@ -1,6 +1,6 @@
 /* iCalToDo+SOGo.h - this file is part of SOGo
  *
- * Copyright (C) 2007-2014 Inverse inc.
+ * Copyright (C) 2007-2017 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,9 +23,16 @@
 
 #import <NGCards/iCalToDo.h>
 
+#define taskStatusCompleted 1
+#define taskStatusInProcess 2
+#define taskStatusCancelled 3
+#define taskStatusNeedsAction 4
+
 @class NSMutableArray;
 
 @interface iCalToDo (SOGoExtensions)
+
++ (NSString *) statusForCode: (int) statusCode;
 
 @end
 
