@@ -634,6 +634,7 @@
                          ng-class="{ 'sg-list-selectable': list.mode.multiple }">
                   <md-list-item ng-repeat="task in list.component.$tasks"
                                 aria-label="{{::task.c_title}}"
+                                ng-class="::task.c_status"
                                 ng-click="list.openTask($event, task)">
                     <div class="md-secondary sg-avatar-selectable"
                          label:aria-label="Toggle item"
@@ -654,11 +655,14 @@
                         </div>
                       </div>
                       <div class="sg-md-body">
-                        <div><!-- spacer --></div>
-                        <div>{{::task.formatted_enddate}}</div>
+                        <div ng-bind="::task.c_location"><!-- location --></div>
+                        <div ng-bind="::task.formatted_enddate"><!-- enddate --></div>
                       </div>
                     </div>
                     <div class="sg-tile-icons">
+                      <md-icon ng-show="::(task.status == 'completed')">check</md-icon>
+                      <md-icon ng-show="::(task.c_status == 'in-process')">timelapse</md-icon>
+                      <md-icon ng-show="::(task.c_status == 'needs-action')">error_outline</md-icon>
                       <md-icon ng-show="::task.c_iscycle">repeat</md-icon>
                       <md-icon ng-show="::task.c_nextalarm">alarm</md-icon>
                     </div>
